[package]
name = "release"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
chrono = "0.4.42"
colored = "3.0.0"
dirs = "6.0.0"
figment = { version = "0.10", features = ["env", "toml"] }
git2 = "0.20.2"     # We use git2 for general local git actions.
llm = { version = "1.3.4", features = ["openai", "anthropic", "google"] }
octocrab = "0.47.1" # We use octocrab for github api actions.
polyfmt = { git = "https://github.com/clintjedwards/polyfmt-rs.git", branch = "main" }
semver = "1.0.27"
serde = { version = "1.0", features = ["derive"] }
strum = "0.27"
strum_macros = "0.27"
tera = "1.20.1"
tokio = { version = "1.48.0", features = ["full"] }
which = "8.0.0"
